tests/errors/call.pa

program vars(output);
var x: integer;
	y : real;
	a, b : integer;
	bb, bbb: boolean;

function gcd(var A: integer; B: real; var C: boolean): real;
	begin
		if A = 0 then
			gcd := B
		else
			gcd := A
	end;

function paramcount(var x: integer): real;
	begin

	end;

function p: integer;
	begin
	end;

begin
	y := paramcount(bb);
	{y := gcd(x, y, bb or bbb);}
end.

